[WFCORE-6074] Unlock preview features from underlying JDKs by default